--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ button{
     font-weight:bold;
     font-size:18px;
     border-radius: 25px;
+    background-color: #f5f5f5;
     transition: all 0.4s;
     
     
