--- a/style.css
+++ b/style.css
@@ -9,21 +9,30 @@ body{
 .wrapper{
     background-color:#f5f5f5;
     margin: 50px;
-    height:1000px;
+    height:700px;
     display:flex;
     justify-content: center;
     align-items:center;
+    border-radius: 45px 45px;
+    border:4px solid #6b7280;
 }
 
 .nav{
-    background-color:#0a0a0a;
-    height:100px;
+
+    border:4px solid #6b7280;
+    height:150px;
     margin-left:50px;
     margin-right:50px;
     margin-top:25px;
-    border:1px solid #f5f5f5;
-    
+    background-color: #f5f5f5;
+    border-radius: 45px 45px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    padding: 25px;
 }
+
 
 a{
     text-decoration: none;
@@ -44,7 +53,7 @@ button{
     font-weight:bold;
     font-size:18px;
     border-radius: 25px;
-    background-color: #f5f5f5;
+    border:4px solid #6b7280;
     transition: all 0.4s;
     
     
@@ -59,5 +68,6 @@ button{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-color: #f5f5f5;
       
 }
