--- a/Portfolio/about.css
+++ b/Portfolio/about.css
@@ -80,3 +80,17 @@ font-size:25px;
 font-weight:bold;
 
 }
+
+@media screen and (max-width:860px){
+    .nav{
+        flex-direction: column;
+    }
+
+    .nav{
+        height: 400px;
+        
+    }
+    button{
+        width:600px;
+    }
+}
