--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -71,3 +71,9 @@ button{
     background-color: #f5f5f5;
       
 }
+
+@media screen and (max-width: 513px){
+    .link-box{
+        border:none;
+    }
+}
