--- a/Portfolio/about.css
+++ b/Portfolio/about.css
@@ -92,12 +92,18 @@ font-weight:bold;
     }
     button{
         width:550px;
+        color: #0a0a0a;
+    }
+    button:hover{
+        background-color: #0a0a0a;
+        color:#f5f5f5;
     }
 }
 
 @media  screen and (max-width: 709px){
     button{
         width:350px;
+        color:#0a0a0a;
     }
 
     img{
@@ -108,11 +114,21 @@ font-weight:bold;
         padding:20px;
     }
     
+    button:hover{
+        background-color: #0a0a0a;
+        color:#f5f5f5;
+    }
 }
 
-@media screen and (max-width:400px){
+@media screen and (max-width:480px){
     button{
         width:200px;
+        color:#0a0a0a;
+    }
+
+    button:hover{
+        background-color: #0a0a0a;
+        color:#f5f5f5;
     }
 
     img{
