--- a/Portfolio/resume.css
+++ b/Portfolio/resume.css
@@ -86,26 +86,52 @@ main{
     }
     button{
         width:550px;
+        color:#0a0a0a;
+    }
+    button:hover{
+        background-color: #0a0a0a;
+        color:#f5f5f5;
     }
 }
 
 @media  screen and (max-width: 709px){
     button{
         width:350px;
+        color:#0a0a0a;
+    }
+    button:hover{
+        background-color: #0a0a0a;
+        color:#f5f5f5;
     }
 }
 
-@media screen and (max-width:400px){
+@media screen and (max-width:480px){
     button{
         width:200px;
+        color:#0a0a0a;
+    }
+
+    button:hover{
+        background-color: #0a0a0a;
+        color:#f5f5f5;
     }
 
     main{
-        margin:0 auto;
+       margin-left: 40px;
        
     }
 
     .rand{
         margin-left:40px;
     }
+}
+
+
+
+@media screen and (max-width:500px){
+    main{
+        margin-right:auto;
+    }
+    
+    
 }
