--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -76,4 +76,13 @@ button{
     .link-box{
         border:none;
     }
+
+    button{
+        color:#0a0a0a;
+    }
+
+    button:hover{
+        background-color: #0a0a0a;
+        color:#f5f5f5;
+    }
 }
