--- a/scrimba/react_sandbox/src/App.css
+++ b/scrimba/react_sandbox/src/App.css
@@ -1,42 +1,98 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+h1{
+  color: #FFF;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  font-family: Inter;
+  font-size: 39.06px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  letter-spacing: -1.953px;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+li{
+  font-size: 25px;
+  padding: 18px 0px;
+  color: #FFF;
+  font-family: Inter;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+*{
+  box-sizing:border-box;
+}
+
+body{
+  color: white;
+  margin:0;
+  border: 1px solid #000;
+  background: #282D35;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+nav > img{
+  width: 28px;
+  height: 28px;
+  
+
+}
+
+.facts{
+  padding-left: 5px;
+
+}
+
+nav{
+  display:flex;
+  justify-content: space-between;
+  align-items: center;
+  background: #21222A;
+  height: 90px;
+  padding: 0px 22px;
+}
+
+nav > span{
+  color: #61DAFB;
+font-family: Inter;
+font-size: 22px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+letter-spacing: -1.113px;
+  
+
+}
+
+li::marker{
+  color: #61DAFB;
+  font-size: 30px;
+}
+
+nav > p {
+  color: #DEEBF8;
+  text-align: right;
+  font-family: Inter;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
   }
-  to {
-    transform: rotate(360deg);
-  }
+
+.main{
+  height: 100vh
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.main-container{
+  display:flex;
+  flex-direction: row;
+  justify-content: space-between;
+   padding: 57px 0px 0px 25px
 }
 
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.bgicon{
+  padding-top:20vh;
+  
+  
 }
