--- a/scrimba/airbnb_clone/src/index.css
+++ b/scrimba/airbnb_clone/src/index.css
@@ -96,6 +96,7 @@ section{
   .wrapper{
     display:flex;
     flex-direction:row;
-    margin-left: 15px
+    margin-left: 15px;
+    overflow:auto;
   
   }
